--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 
 PORT = 3001
-MONGOURI = mongodb+srv://bsstha21:c7Oc8AEJZ1KpwoOb@auth.mxo91.mongodb.net/userAuth?retryWrites=true&w=majority
+MONGOURI = mongodb+srv://greatbiyash:eBYByDGUETldKU0S@cluster-new.o36w7.mongodb.net/?retryWrites=true&w=majority&appName=cluster-new
 JWT_SECRET= "jwttokenkey"
